package into maven module

--- a/pom.xml
+++ b/pom.xml
@@ -104,11 +104,28 @@
         </configuration>
       </plugin>
       <plugin>
+        <artifactId>maven-assembly-plugin</artifactId>
+        <configuration>
+          <descriptors>
+            <descriptor>src/assembly/src.xml</descriptor>
+          </descriptors>
+        </configuration>
+        <executions>
+          <execution>
+            <id>make-assembly</id>
+            <phase>package</phase>
+            <goals>
+              <goal>single</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
+      <plugin>
         <artifactId>maven-javadoc-plugin</artifactId>
         <configuration>
           <links>
             <link>https://docs.oracle.com/en/java/javase/11/docs/api/</link>
-            <link>https://docs.spring.io/spring-framework/docs/current/javadoc-api/</link>
+            <link>http://undertow.io/javadoc/2.0.x/</link>
           </links>
         </configuration>
         <executions>
@@ -156,6 +173,10 @@
     </plugins>
     <pluginManagement>
       <plugins>
+        <plugin>
+          <artifactId>maven-assembly-plugin</artifactId>
+          <version>3.1.0</version>
+        </plugin>
         <plugin>
           <artifactId>maven-javadoc-plugin</artifactId>
           <version>3.0.1</version>
