--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
   <version>0.1.0-SNAPSHOT</version>
   <inceptionYear>2018</inceptionYear>
   <name>Undertow JFR</name>
-  <description>An Unterdow HttpHandler that generates JFR events.</description>
+  <description>An Undertow HttpHandler that generates JFR events.</description>
 
   <prerequisites>
     <maven>3.0.3</maven>
