--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.github.marschall</groupId>
   <artifactId>undertow-jfr</artifactId>
-  <version>0.1.0</version>
+  <version>0.2.0-SNAPSHOT</version>
   <inceptionYear>2018</inceptionYear>
   <name>Undertow JFR</name>
   <description>An Undertow HttpHandler that generates JFR events.</description>
@@ -18,7 +18,7 @@
     <connection>scm:git:git@github.com:marschall/undertow-jfr.git</connection>
     <developerConnection>scm:git:git@github.com:marschall/undertow-jfr.git</developerConnection>
     <url>${project.url}</url>
-    <tag>0.1.0</tag>
+    <tag>HEAD</tag>
   </scm>
 
   <developers>
