--- a/pom.xml
+++ b/pom.xml
@@ -50,22 +50,8 @@
     </dependency>
     <dependency>
       <groupId>org.junit.jupiter</groupId>
-      <artifactId>junit-jupiter-api</artifactId>
+      <artifactId>junit-jupiter</artifactId>
       <version>${junit.jupiter.version}</version>
-      <scope>test</scope>
-    </dependency>
-    <!-- Only required to run tests in an IDE that bundles an older version -->
-    <dependency>
-      <groupId>org.junit.jupiter</groupId>
-      <artifactId>junit-jupiter-engine</artifactId>
-      <version>${junit.jupiter.version}</version>
-      <scope>test</scope>
-    </dependency>
-    <!-- Only required to run tests in an IDE that bundles an older version -->
-    <dependency>
-      <groupId>org.junit.platform</groupId>
-      <artifactId>junit-platform-launcher</artifactId>
-      <version>${junit.platform.version}</version>
       <scope>test</scope>
     </dependency>
     <dependency>
@@ -157,13 +143,6 @@
           <arguments>-Pdeploy-to-sonatype-oss</arguments>
         </configuration>
       </plugin>
-      <plugin>
-        <groupId>com.github.marschall</groupId>
-        <artifactId>jdeps-maven-plugin</artifactId>
-        <configuration>
-          <profile>true</profile>
-        </configuration>
-      </plugin>
     </plugins>
     <pluginManagement>
       <plugins>
@@ -223,11 +202,6 @@
           <artifactId>maven-scm-plugin</artifactId>
           <version>1.11.1</version>
         </plugin>
-        <plugin>
-          <groupId>com.github.marschall</groupId>
-          <artifactId>jdeps-maven-plugin</artifactId>
-          <version>0.5.1</version>
-        </plugin>
       </plugins>
     </pluginManagement>
   </build>
@@ -258,10 +232,8 @@
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-    <java.version>1.8</java.version>
-    <junit.jupiter.version>5.3.2</junit.jupiter.version>
-    <junit.platform.version>1.3.2</junit.platform.version>
-    <undertow.version>2.0.16.Final</undertow.version>
+    <junit.jupiter.version>5.4.2</junit.jupiter.version>
+    <undertow.version>2.0.22.Final</undertow.version>
   </properties>
 
 </project>
