--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,18 @@
     </license>
   </licenses>
 
+  <dependencyManagement>
+    <dependencies>
+      <dependency>
+        <groupId>org.junit</groupId>
+        <artifactId>junit-bom</artifactId>
+        <version>5.7.2</version>
+        <type>pom</type>
+        <scope>import</scope>
+      </dependency>
+    </dependencies>
+  </dependencyManagement>
+
   <dependencies>
     <dependency>
       <groupId>io.undertow</groupId>
@@ -47,7 +59,6 @@
     <dependency>
       <groupId>org.junit.jupiter</groupId>
       <artifactId>junit-jupiter</artifactId>
-      <version>${junit.jupiter.version}</version>
       <scope>test</scope>
     </dependency>
     <dependency>
@@ -196,7 +207,7 @@
         </plugin>
         <plugin>
           <artifactId>maven-scm-plugin</artifactId>
-          <version>1.11.1</version>
+          <version>1.11.2</version>
         </plugin>
       </plugins>
     </pluginManagement>
@@ -228,8 +239,7 @@
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-    <junit.jupiter.version>5.4.2</junit.jupiter.version>
-    <undertow.version>2.0.25.Final</undertow.version>
+    <undertow.version>2.2.8.Final</undertow.version>
   </properties>
 
 </project>
