--- a/pom.xml
+++ b/pom.xml
@@ -8,10 +8,6 @@
   <name>Undertow JFR</name>
   <description>An Undertow HttpHandler that generates JFR events.</description>
 
-  <prerequisites>
-    <maven>3.0.3</maven>
-  </prerequisites>
-
   <url>https://github.com/marschall/undertow-jfr</url>
 
   <scm>
@@ -41,6 +37,18 @@
     </license>
   </licenses>
 
+  <dependencyManagement>
+    <dependencies>
+      <dependency>
+        <groupId>org.junit</groupId>
+        <artifactId>junit-bom</artifactId>
+        <version>5.8.2</version>
+        <type>pom</type>
+        <scope>import</scope>
+      </dependency>
+    </dependencies>
+  </dependencyManagement>
+
   <dependencies>
     <dependency>
       <groupId>io.undertow</groupId>
@@ -51,21 +59,11 @@
     <dependency>
       <groupId>org.junit.jupiter</groupId>
       <artifactId>junit-jupiter-api</artifactId>
-      <version>${junit.jupiter.version}</version>
       <scope>test</scope>
     </dependency>
-    <!-- Only required to run tests in an IDE that bundles an older version -->
     <dependency>
       <groupId>org.junit.jupiter</groupId>
-      <artifactId>junit-jupiter-engine</artifactId>
-      <version>${junit.jupiter.version}</version>
-      <scope>test</scope>
-    </dependency>
-    <!-- Only required to run tests in an IDE that bundles an older version -->
-    <dependency>
-      <groupId>org.junit.platform</groupId>
-      <artifactId>junit-platform-launcher</artifactId>
-      <version>${junit.platform.version}</version>
+      <artifactId>junit-jupiter</artifactId>
       <scope>test</scope>
     </dependency>
     <dependency>
@@ -259,9 +257,7 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     <java.version>1.8</java.version>
-    <junit.jupiter.version>5.3.2</junit.jupiter.version>
-    <junit.platform.version>1.3.2</junit.platform.version>
-    <undertow.version>2.0.16.Final</undertow.version>
+    <undertow.version>2.2.17.Final</undertow.version>
   </properties>
 
 </project>
